--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Government Jobs Portal</title>
     <link rel="stylesheet" href="styless.css">
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1959213550172585"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
