--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,8 @@
     <title>Government Jobs Portal</title>
     <link rel="stylesheet" href="styless.css">
     <link rel="stylesheet" href="styless1.css">
-   
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1959213550172585"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
