--- a/index.html
+++ b/index.html
@@ -36,7 +36,32 @@
                 <a href="index1.html" class="apply-button">View Details</a>  07-02-2025
             </div>
             <div class="card">
-                <img src="rrb.jpeg" alt="Latest Jobs">
+                <img src="SSCImage.jpeg" alt="Latest Jobs">
+                <h2>RRB Group-D Recruitment</h2>
+                <a href="index1.html" class="apply-button">View Details</a>
+            </div>
+            <div class="card">
+                <img src="Postallmage.jpeg" alt="Latest Jobs">
+                <h2>RRB Group-D Recruitment</h2>
+                <a href="index1.html" class="apply-button">View Details</a>
+            </div>
+            <div class="card">
+                <img src="ArmyImage.jpeg" alt="Latest Jobs">
+                <h2>RRB Group-D Recruitment</h2>
+                <a href="index1.html" class="apply-button">View Details</a>
+            </div>
+            <div class="card">
+                <img src="SSCCGLImage.jpeg" alt="Latest Jobs">
+                <h2>RRB Group-D Recruitment</h2>
+                <a href="index1.html" class="apply-button">View Details</a>
+            </div>
+            <div class="card">
+                <img src="ArmyImage.jpeg" alt="Latest Jobs">
+                <h2>RRB Group-D Recruitment</h2>
+                <a href="index1.html" class="apply-button">View Details</a>
+            </div>
+            <div class="card">
+                <img src="SSCImage.jpeg" alt="Latest Jobs">
                 <h2>RRB Group-D Recruitment</h2>
                 <a href="index1.html" class="apply-button">View Details</a>
             </div>
@@ -46,32 +71,7 @@
                 <a href="index1.html" class="apply-button">View Details</a>
             </div>
             <div class="card">
-                <img src="rrb.jpeg" alt="Latest Jobs">
-                <h2>RRB Group-D Recruitment</h2>
-                <a href="index1.html" class="apply-button">View Details</a>
-            </div>
-            <div class="card">
-                <img src="rrb.jpeg" alt="Latest Jobs">
-                <h2>RRB Group-D Recruitment</h2>
-                <a href="index1.html" class="apply-button">View Details</a>
-            </div>
-            <div class="card">
-                <img src="rrb.jpeg" alt="Latest Jobs">
-                <h2>RRB Group-D Recruitment</h2>
-                <a href="index1.html" class="apply-button">View Details</a>
-            </div>
-            <div class="card">
-                <img src="rrb.jpeg" alt="Latest Jobs">
-                <h2>RRB Group-D Recruitment</h2>
-                <a href="index1.html" class="apply-button">View Details</a>
-            </div>
-            <div class="card">
-                <img src="rrb.jpeg" alt="Latest Jobs">
-                <h2>RRB Group-D Recruitment</h2>
-                <a href="index1.html" class="apply-button">View Details</a>
-            </div>
-            <div class="card">
-                <img src="rrb.jpeg" alt="Latest Jobs">
+                <img src="PostalImage.jpeg" alt="Latest Jobs">
                 <h2>RRB Group-D Recruitment</h2>
                 <a href="index1.html" class="apply-button">View Details</a>
             </div>
