--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="index1.html" class="apply-button">View Details</a>
             </div>
             <div class="card">
-                <img src="Postallmage.jpeg" alt="Latest Jobs">
+                <img src="NavyImage.jpeg" alt="Latest Jobs">
                 <h2>RRB Group-D Recruitment</h2>
                 <a href="index1.html" class="apply-button">View Details</a>
             </div>
