--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Government Jobs Portal</title>
+    <title>Govt Job Portal</title>
     <link rel="stylesheet" href="styless.css">
     <link rel="stylesheet" href="styless1.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1959213550172585"
@@ -15,7 +15,7 @@
             <nav>
                 <a href="index.html" class="Home">Home</a>
             </nav>
-            <h1>Government Job Portal</h1>
+            <h1>Govt Job Portal</h1>
             
             <section>
                 <div class="icon-container">
@@ -166,7 +166,7 @@
         <footer>
             <header>
                 <footer>
-                    <p>&copy; Government Job Portal, All rights reserved. </p>
+                    <p>&copy; Govt Job Portal, All rights reserved. </p>
                 </footer>
                 <section>
                     <div class="icon-container">
