--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Government Jobs Portal</title>
+    <title>Govt Jobs Portal</title>
     <link rel="stylesheet" href="styless.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1959213550172585"
      crossorigin="anonymous"></script>
@@ -14,7 +14,7 @@
             <nav>
                 <a href="index.html" class="Home">Home</a>
             </nav>
-            <h1>Government Job Portal</h1>
+            <h1>Govt Job Portal</h1>
             
             <section>
                 <div class="icon-container">
@@ -33,7 +33,7 @@
             <div class="card">
                 <img src="rrb.jpeg" alt="Latest Jobs">
                 <h2>RRB Group-D Recruitment</h2>
-                <a href="index1.html" class="apply-button">View Details</a>  07-02-2025
+                <a href="index1.html" class="apply-button">View Details</a>
             </div>
             <div class="card">
                 <img src="SSCImage.jpeg" alt="Latest Jobs">
@@ -80,7 +80,7 @@
         <footer>
             <header>
                 <footer>
-                    <p>&copy; Government Job Portal, All rights reserved. </p>
+                    <p>&copy; Govt Job Portal, All rights reserved. </p>
                 </footer>
                 <section>
                     <div class="icon-container">
